--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "flowbite": "^1.6.2",
     "nuxt": "3.0.0",
     "postcss": "^8.4.21",
+    "prisma": "^4.10.1",
     "sass": "^1.57.1",
     "tailwindcss-dark-mode": "^1.1.7",
-    "prisma": "^4.9.0",
     "uuid": "^9.0.0"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
-    "@heroicons/vue": "^2.0.13"
+    "@heroicons/vue": "^2.0.13",
+    "@tiptap/extension-underline": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.209",
+    "@tiptap/vue-3": "^2.0.0-beta.209",
+    "date-fns": "^2.29.3"
   },
   "prisma": {
     "schema": "server/database/schema.prisma"
